--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "create-react-app": "^4.0.2"
+    "bootstrap": "^4.6.0",
+    "create-react-app": "^4.0.2",
+    "react-bootstrap": "^1.4.3",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {},
   "scripts": {
